[FROM GALAXY] Add support for mongodb federated database
(cherry picked from commit cbb81e30da39d09d6bcddf84d9801c7e64bf2f8a)