@@ -16,6 +16,7 @@ package io.trino.plugin.mongodb;
 import com.google.common.collect.ImmutableMap;
 import com.mongodb.ConnectionString;
 import io.airlift.log.Logger;
+import io.trino.Session;
 import io.trino.plugin.tpch.TpchPlugin;
 import io.trino.testing.DistributedQueryRunner;
 import io.trino.tpch.TpchTable;
@@ -24,8 +25,10 @@ import java.util.Map;
 
 import static io.airlift.testing.Closeables.closeAllSuppress;
 import static io.trino.plugin.mongodb.TestingMongoAtlasInfoProvider.getConnectionString;
+import static io.trino.plugin.mongodb.TestingMongoAtlasInfoProvider.getMongoAtlasFederatedDatabaseInfo;
 import static io.trino.plugin.tpch.TpchMetadata.TINY_SCHEMA_NAME;
 import static io.trino.testing.QueryAssertions.copyTpchTables;
+import static io.trino.testing.TestingSession.testSessionBuilder;
 
 public final class MongoAtlasQueryRunner
 {
@@ -61,15 +64,80 @@ public final class MongoAtlasQueryRunner
         }
     }
 
-    public static void main(String[] args)
+    public static DistributedQueryRunner createMongoAtlasFederatedMongoQueryRunner(
+            TestingMongoAtlasInfoProvider.MongoAtlasFederatedDatabaseInfo clusterInfo,
+            Map<String, String> extraProperties,
+            Iterable<TpchTable<?>> tables)
             throws Exception
     {
-        DistributedQueryRunner atlasQueryRunner = createMongoAtlasQueryRunner(
-                getConnectionString(),
-                ImmutableMap.of("http-server.http.port", "8080"),
-                TpchTable.getTables());
-        Logger log = Logger.get(MongoAtlasQueryRunner.class);
-        log.info("======== SERVER STARTED ========");
-        log.info("\n====\n%s\n====", atlasQueryRunner.getCoordinator().getBaseUrl());
+        DistributedQueryRunner queryRunner = DistributedQueryRunner.builder(MongoQueryRunner.createSession())
+                .setExtraProperties(extraProperties)
+                .build();
+        try {
+            queryRunner.installPlugin(new TpchPlugin());
+            queryRunner.createCatalog("tpch", "tpch");
+
+            // Federated database source catalog
+            Map<String, String> federatedSourceProperties = Map.of("mongodb.connection-url", clusterInfo.federatedDatabaseSourceConnectionString().toString());
+            queryRunner.installPlugin(new MongoPlugin());
+            queryRunner.createCatalog("mongo_federated_source", "mongodb", federatedSourceProperties);
+            queryRunner.execute("CREATE SCHEMA IF NOT EXISTS mongo_federated_source." + TPCH_SCHEMA);
+            copyTpchTables(queryRunner, "tpch", TINY_SCHEMA_NAME, createSession("mongo_federated_source"), tables);
+
+            // Federated database catalog
+            Map<String, String> federatedProperties = Map.of("mongodb.connection-url", clusterInfo.federatedDatabaseConnectionString().toString());
+            queryRunner.createCatalog("mongodb", "mongodb", federatedProperties);
+            // Show tables statement will fail during initialization in case schema doesn't exist.
+            // It helps to isolate any issues with the initial resource setup.
+            queryRunner.execute("SHOW TABLES FROM " + TPCH_SCHEMA);
+
+            return queryRunner;
+        }
+        catch (Throwable e) {
+            closeAllSuppress(e, queryRunner);
+            throw e;
+        }
+    }
+
+    public static Session createSession(String catalog)
+    {
+        return testSessionBuilder()
+                .setCatalog(catalog)
+                .setSchema(TPCH_SCHEMA)
+                .build();
+    }
+
+    public static final class MongoAtlasQueryRunnerMain
+    {
+        private MongoAtlasQueryRunnerMain() {}
+
+        public static void main(String[] args)
+                throws Exception
+        {
+            DistributedQueryRunner atlasQueryRunner = createMongoAtlasQueryRunner(
+                    getConnectionString(),
+                    ImmutableMap.of("http-server.http.port", "8080"),
+                    TpchTable.getTables());
+            Logger log = Logger.get(MongoAtlasQueryRunnerMain.class);
+            log.info("======== SERVER STARTED ========");
+            log.info("\n====\n%s\n====", atlasQueryRunner.getCoordinator().getBaseUrl());
+        }
+    }
+
+    public static final class MongoAtlasFederatedQueryRunnerMain
+    {
+        private MongoAtlasFederatedQueryRunnerMain() {}
+
+        public static void main(String[] args)
+                throws Exception
+        {
+            DistributedQueryRunner atlasFederatedQueryRunner = createMongoAtlasFederatedMongoQueryRunner(
+                    getMongoAtlasFederatedDatabaseInfo(),
+                    ImmutableMap.of("http-server.http.port", "8080"),
+                    TpchTable.getTables());
+            Logger log = Logger.get(MongoAtlasFederatedQueryRunnerMain.class);
+            log.info("======== SERVER STARTED ========");
+            log.info("\n====\n%s\n====", atlasFederatedQueryRunner.getCoordinator().getBaseUrl());
+        }
     }
 }
